--- a/index.html
+++ b/index.html
@@ -5,15 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chaitu</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
- <div class="head"></div>
+  
+  <form action="" class="form">
     <div>
-        <ul class="unOrder">
-       
-        </ul>
+      <label for="name">NAME</label>
     </div>
+    <div>
+      <input type="text" placeholder="name" id="name" name="name">
+    </div>
+    <div>
+      <label for="email">EMAIL</label>
+    </div>
+    <div>
+      <input type="email" placeholder="email" id="email">
+    </div>
+    <div>
+      <label for="psd">password</label>
+    </div>
+    <div>
+      <input type="password" placeholder="password" id="psd">
+    </div>
+    <div>
+      <h4 class="psdText none">password must be 6 digits</h4>
+    </div>
+    <div>
+      <label for="cfmPsd">password</label>
+    </div>
+    <div>
+      <input type="password" placeholder="conform password" id="cnfPsd">
+    </div>
+    <br>
+    <div>
+      <input type="radio" id="male" name="gender" value="male">
+      <label for="male">male</label>
+      <input type="radio" id="female" name="gender" value="female">
+      <label for="male">female</label>
+    </div>
+    <br>
+    <div>
+      <input type="checkbox" id="maths" >
+      <label for="maths">maths</label>
+      <input type="checkbox" id="english" >
+      <label for="english">english</label>
+      <input type="checkbox" id="science"  >
+      <label for="science">science</label>
+      <input type="checkbox" id="social" >
+      <label for="social">social</label>
+      <input type="checkbox" id="bio" >
+      <label for="bio">bio</label>
+    </div>
+    <br>
+    <div>
+      <input type="datetime-local" id="date">
+    </div>
+    <br>
+<div>
+  <input type="submit" value="submit here" class="btn">
+</div>
+    
+  </form>
+
+
+   
 
     <script src="./node.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
